--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,11 @@
 CP Import To do list:
 
 - eliminate the need for Excel.
-- elimante need to re-upload media file should it already exist
+- eliminate need to re-upload media file should it already exist
+- add options for to import users as:
+	- accounts
+	- custom fields
+	- none
+- set permalink structure as CP url style
+- set custom field for each post that contains CP article id
+
