Updated TODO list to reflect changes implemented in version 2.0 and listed information for filing feature requests or bug reports
git-svn-id: https://plugins.svn.wordpress.org/cp-import/trunk@139259 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 CP Import To-Do list:
 
-- Eliminate the need for Excel.
-- Eliminate need to re-upload media file should it already exist
+- None!
+
+Email feature requests or bug reports to john@johnluetke.net with the subject "CP Import" or post a message on the support forum: http://wordpress.org/tags/cp-import
